--- a/index.html
+++ b/index.html
@@ -5,174 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Accueil</title>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    /* === Réinitialisation de base === */
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-
-    /* === Navigation & Menu Mobile === */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      background: rgba(0,0,0,0.7);
-    }
-    nav .menu {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      padding: 1rem;
-    }
-    nav .menu li {
-      margin: 0 1rem;
-    }
-    nav .menu a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: bold;
-    }
-    .hamburger {
-      display: none;
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      font-size: 2rem;
-      color: #fff;
-      cursor: pointer;
-      z-index: 1100;
-    }
-    .mobile-menu {
-      display: none;
-      position: fixed;
-      top: 0;
-      right: 0;
-      width: 70%;
-      height: 100%;
-      background: #000;
-      z-index: 1050;
-      padding: 20px;
-      overflow-y: auto;
-    }
-    .mobile-menu.active {
-      display: block;
-    }
-    .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.5);
-      z-index: 1040;
-    }
-
-    /* === Section Héros (Desktop) === */
-    .hero {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      background-color: #000;
-      overflow: hidden;
-    }
-    .video-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-    .bg-video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      display: block;
-      border: none;
-    }
-    .hero-title {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-      color: #fff;
-      font-size: 2rem;
-      text-shadow: 0 0 5px rgba(0,0,0,0.7);
-      white-space: nowrap;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: rgba(0,0,0,0.8);
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      z-index: 1000;
-    }
-    footer p {
-      font-size: 1rem;
-      margin: 0;
-      color: #fff;
-    }
-
-    /* === Adaptations pour Mobile === */
-    @media only screen and (max-width: 768px) {
-      /* Pour la partie onglets vidéo, on remplace le fond noir par un gris transparent */
-      .hero {
-        background: rgba(128, 128, 128, 0.5);
-        height: 100vh;
-      }
-      /* La vidéo reste en plein écran sur mobile */
-      .video-container {
-        display: block;
-      }
-      .bg-video {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-      }
-      /* Réduction du titre */
-      .hero-title {
-        font-size: 1rem;
-      }
-      /* Menu mobile */
-      nav .menu {
-        display: none;
-      }
-      .hamburger {
-        display: block;
-      }
-      footer p {
-        font-size: 0.6rem;
-      }
-    }
-  </style>
-  <script>
-    // Gestion du menu mobile
-    document.addEventListener("DOMContentLoaded", function(){
-      const hamburger = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobile-menu");
-      const overlay = document.getElementById("overlay");
-      
-      hamburger.addEventListener("click", function(){
-        mobileMenu.classList.toggle("active");
-        overlay.style.display = mobileMenu.classList.contains("active") ? "block" : "none";
-      });
-      
-      overlay.addEventListener("click", function(){
-        mobileMenu.classList.remove("active");
-        overlay.style.display = "none";
-      });
-    });
-  </script>
   <script src="script.js" defer></script>
+  <style>
+    /* Vous pouvez conserver vos styles spécifiques ici ou dans styles.css */
+  </style>
 </head>
 <body>
   <!-- Navigation -->
